style: upds swag docs + swag fmt
