# cmd/docs/swagger.json
@@ -43,9 +43,9 @@
                         }
                     },
                     "400": {
-                        "description": "Некорректный запрос",
+                        "description": "Данные невалидны",
                         "schema": {
-                            "$ref": "#/definitions/api.InvalidRequestErrorResponse"
+                            "$ref": "#/definitions/api.ValidationErrorResponse"
                         }
                     },
                     "401": {
@@ -141,9 +141,9 @@
                         }
                     },
                     "400": {
-                        "description": "Некорректный запрос",
+                        "description": "Данные невалидны",
                         "schema": {
-                            "$ref": "#/definitions/api.InvalidRequestErrorResponse"
+                            "$ref": "#/definitions/api.ValidationErrorResponse"
                         }
                     },
                     "409": {
@@ -217,10 +217,12 @@
             "properties": {
                 "login": {
                     "type": "string",
+                    "maxLength": 50,
                     "example": "the_real_slim_shady"
                 },
                 "password": {
                     "type": "string",
+                    "maxLength": 100,
                     "example": "password1234"
                 }
             }
@@ -246,14 +248,19 @@
             "properties": {
                 "login": {
                     "type": "string",
+                    "maxLength": 50,
+                    "minLength": 2,
                     "example": "the_real_slim_shady"
                 },
                 "name": {
                     "type": "string",
+                    "maxLength": 100,
                     "example": "Slim"
                 },
                 "password": {
                     "type": "string",
+                    "maxLength": 100,
+                    "minLength": 8,
                     "example": "password1234"
                 },
                 "role": {
@@ -262,7 +269,17 @@
                 },
                 "surname": {
                     "type": "string",
+                    "maxLength": 100,
                     "example": "Shady"
+                }
+            }
+        },
+        "api.ValidationErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "validation error"
                 }
             }
         }
